--- a/ForFormation/ForFormation.csproj
+++ b/ForFormation/ForFormation.csproj
@@ -14,6 +14,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+    <PackageReference Include="FontAwesomeToolkit" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="FontAwesomeToolkit" />
+  </ItemGroup>
 </Project>
